// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`StreamingMessageParser > valid artifacts with actions > should correctly parse chunks and strip out uPage artifacts (0) > onActionClose 1`] = `
{
  "action": {
    "action": "add",
    "content": "npm install",
    "domId": "page-index",
    "id": "action_1",
    "pageName": "index",
    "rootDomId": "section-1",
    "sort": undefined,
    "validRootDomId": true,
  },
  "actionId": "0",
  "artifactId": "artifact_1",
  "messageId": "message_1",
}
`;

exports[`StreamingMessageParser > valid artifacts with actions > should correctly parse chunks and strip out uPage artifacts (0) > onActionOpen 1`] = `
{
  "action": {
    "action": "add",
    "content": "",
    "domId": "page-index",
    "id": "action_1",
    "pageName": "index",
    "rootDomId": "section-1",
    "sort": undefined,
    "validRootDomId": true,
  },
  "actionId": "0",
  "artifactId": "artifact_1",
  "messageId": "message_1",
}
`;

exports[`StreamingMessageParser > valid artifacts with actions > should correctly parse chunks and strip out uPage artifacts (0) > onArtifactClose 1`] = `
{
  "id": "artifact_1",
  "messageId": "message_1",
  "name": "index",
  "title": "Some title",
}
`;

exports[`StreamingMessageParser > valid artifacts with actions > should correctly parse chunks and strip out uPage artifacts (0) > onArtifactOpen 1`] = `
{
  "id": "artifact_1",
  "messageId": "message_1",
  "name": "index",
  "title": "Some title",
}
`;

exports[`StreamingMessageParser > valid artifacts with actions > should correctly parse chunks and strip out uPage artifacts (1) > onActionClose 1`] = `
{
  "action": {
    "action": "add",
    "content": "npm install",
    "domId": "page-index",
    "id": "action_1",
    "pageName": "index",
    "rootDomId": "section-1",
    "sort": undefined,
    "validRootDomId": true,
  },
  "actionId": "0",
  "artifactId": "artifact_1",
  "messageId": "message_1",
}
`;

exports[`StreamingMessageParser > valid artifacts with actions > should correctly parse chunks and strip out uPage artifacts (1) > onActionClose 2`] = `
{
  "action": {
    "action": "update",
    "content": "some content",
    "domId": "section-1",
    "id": "action_2",
    "pageName": "index",
    "rootDomId": "section-1",
    "sort": undefined,
    "validRootDomId": true,
  },
  "actionId": "1",
  "artifactId": "artifact_1",
  "messageId": "message_1",
}
`;

exports[`StreamingMessageParser > valid artifacts with actions > should correctly parse chunks and strip out uPage artifacts (1) > onActionOpen 1`] = `
{
  "action": {
    "action": "add",
    "content": "",
    "domId": "page-index",
    "id": "action_1",
    "pageName": "index",
    "rootDomId": "section-1",
    "sort": undefined,
    "validRootDomId": true,
  },
  "actionId": "0",
  "artifactId": "artifact_1",
  "messageId": "message_1",
}
`;

exports[`StreamingMessageParser > valid artifacts with actions > should correctly parse chunks and strip out uPage artifacts (1) > onActionOpen 2`] = `
{
  "action": {
    "action": "update",
    "content": "",
    "domId": "section-1",
    "id": "action_2",
    "pageName": "index",
    "rootDomId": "section-1",
    "sort": undefined,
    "validRootDomId": true,
  },
  "actionId": "1",
  "artifactId": "artifact_1",
  "messageId": "message_1",
}
`;

exports[`StreamingMessageParser > valid artifacts with actions > should correctly parse chunks and strip out uPage artifacts (1) > onArtifactClose 1`] = `
{
  "id": "artifact_1",
  "messageId": "message_1",
  "name": "index",
  "title": "Some title",
}
`;

exports[`StreamingMessageParser > valid artifacts with actions > should correctly parse chunks and strip out uPage artifacts (1) > onArtifactOpen 1`] = `
{
  "id": "artifact_1",
  "messageId": "message_1",
  "name": "index",
  "title": "Some title",
}
`;

exports[`StreamingMessageParser > valid artifacts without actions > should correctly parse chunks and strip out uPage artifacts (0) > onArtifactClose 1`] = `
{
  "id": "artifact_1",
  "messageId": "message_1",
  "name": "index",
  "title": "Some title",
}
`;

exports[`StreamingMessageParser > valid artifacts without actions > should correctly parse chunks and strip out uPage artifacts (0) > onArtifactOpen 1`] = `
{
  "id": "artifact_1",
  "messageId": "message_1",
  "name": "index",
  "title": "Some title",
}
`;

exports[`StreamingMessageParser > valid artifacts without actions > should correctly parse chunks and strip out uPage artifacts (1) > onArtifactClose 1`] = `
{
  "id": "artifact_1",
  "messageId": "message_1",
  "name": "index",
  "title": "Some title",
}
`;

exports[`StreamingMessageParser > valid artifacts without actions > should correctly parse chunks and strip out uPage artifacts (1) > onArtifactOpen 1`] = `
{
  "id": "artifact_1",
  "messageId": "message_1",
  "name": "index",
  "title": "Some title",
}
`;

exports[`StreamingMessageParser > valid artifacts without actions > should correctly parse chunks and strip out uPage artifacts (2) > onArtifactClose 1`] = `
{
  "id": "artifact_1",
  "messageId": "message_1",
  "name": "index",
  "title": "Some title",
}
`;

exports[`StreamingMessageParser > valid artifacts without actions > should correctly parse chunks and strip out uPage artifacts (2) > onArtifactOpen 1`] = `
{
  "id": "artifact_1",
  "messageId": "message_1",
  "name": "index",
  "title": "Some title",
}
`;

exports[`StreamingMessageParser > valid artifacts without actions > should correctly parse chunks and strip out uPage artifacts (3) > onArtifactClose 1`] = `
{
  "id": "artifact_1",
  "messageId": "message_1",
  "name": "index",
  "title": "Some title",
}
`;

exports[`StreamingMessageParser > valid artifacts without actions > should correctly parse chunks and strip out uPage artifacts (3) > onArtifactOpen 1`] = `
{
  "id": "artifact_1",
  "messageId": "message_1",
  "name": "index",
  "title": "Some title",
}
`;

exports[`StreamingMessageParser > valid artifacts without actions > should correctly parse chunks and strip out uPage artifacts (4) > onArtifactClose 1`] = `
{
  "id": "artifact_1",
  "messageId": "message_1",
  "name": "index",
  "title": "Some title",
}
`;

exports[`StreamingMessageParser > valid artifacts without actions > should correctly parse chunks and strip out uPage artifacts (4) > onArtifactOpen 1`] = `
{
  "id": "artifact_1",
  "messageId": "message_1",
  "name": "index",
  "title": "Some title",
}
`;

exports[`StreamingMessageParser > valid artifacts without actions > should correctly parse chunks and strip out uPage artifacts (5) > onArtifactClose 1`] = `
{
  "id": "artif name=",
  "messageId": "message_1",
  "name": "index",
  "title": "Some title",
}
`;

exports[`StreamingMessageParser > valid artifacts without actions > should correctly parse chunks and strip out uPage artifacts (5) > onArtifactOpen 1`] = `
{
  "id": "artif name=",
  "messageId": "message_1",
  "name": "index",
  "title": "Some title",
}
`;

exports[`StreamingMessageParser > valid artifacts without actions > should correctly parse chunks and strip out uPage artifacts (6) > onArtifactClose 1`] = `
{
  "id": "artifact_1",
  "messageId": "message_1",
  "name": "index",
  "title": "Some title",
}
`;

exports[`StreamingMessageParser > valid artifacts without actions > should correctly parse chunks and strip out uPage artifacts (6) > onArtifactOpen 1`] = `
{
  "id": "artifact_1",
  "messageId": "message_1",
  "name": "index",
  "title": "Some title",
}
`;
